--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.16.3",
     "fp-ts": "^1.11.2",
     "lodash": "^4.17.11",
-    "react": "^16.5.2"
+    "react": "^16.5.2",
+    "ts-node": "^8.10.1"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
